Added feature list

--- a/index.html
+++ b/index.html
@@ -100,6 +100,20 @@ class ExampleResource extends Resource {
 ?>
             ]]></script><p class="caption">resource/example.php</p>
             
+            <h3>Features</h3>
+            <dl>
+                <dt>Content negotiation</dt>
+                <dd>Content and language negotiation support allowing you to easily pick
+                the best representation for the client request.</dd>
+                <dt>Output encoding</dt>
+                <dd>Built-in support for compressed responses.</dd>
+                <dt>Client side caching</dt>
+                <dd>Support for sending correct cache control headers, entity tags, and
+                304 response codes.</dd>
+                <dt>Collection resources</dt>
+                <dd>Support for managing a collection of resources.</dd>
+            </dl>
+            
             <h3>What Next?</h3>
             <p>More to come hopefully. Please checkout the code and have a play, <a href="http://github.com/peej/tonic/issues">comments</a>
             and <a href="http://help.github.com/forking/">pull requests</a> most welcome.</p>
